
syntax = "proto3";
package auction.v1;

import "gogoproto/gogo.proto";
import "auction/v1/params.proto";
import "google/api/annotations.proto";

option go_package = "github.com/Gravity-Bridge/Gravity-Bridge/module/x/auction/types";

// Query defines the gRPC querier service.
service Query {
    // Parameters queries the parameters of the module.
    rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
      option (google.api.http).get = "/auction/params";
    }
  }
  // QueryParamsRequest is request type for the Query/Params RPC method.
  message QueryParamsRequest {}
  
  // QueryParamsResponse is response type for the Query/Params RPC method.
  message QueryParamsResponse {
    // params holds all the parameters of this module.
    Params params = 1 [ (gogoproto.nullable) = false ];
  }